Unit tests are finally passing.