@@ -1,8 +1,11 @@
 package dk.acto.fafnir.iam.service.controller;
 
 import dk.acto.fafnir.api.model.ClaimData;
+import dk.acto.fafnir.api.model.OrganisationSubjectPair;
 import dk.acto.fafnir.api.model.Slice;
+import dk.acto.fafnir.api.model.UserData;
 import dk.acto.fafnir.api.service.AdministrationService;
+import dk.acto.fafnir.iam.dto.ClaimOrganisationInfo;
 import dk.acto.fafnir.iam.dto.DtoFactory;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -11,6 +14,7 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.ModelAndView;
 import org.springframework.web.servlet.view.RedirectView;
 
+import java.util.Arrays;
 import java.util.Map;
 import java.util.stream.Collectors;
 
@@ -22,27 +26,27 @@ public class ClaimsController
 {
     private final AdministrationService administrationService;
     private final DtoFactory dtoFactory;
-    @GetMapping("page/{pageNumber}")
-    public ModelAndView getClaimsOverview(@PathVariable Long pageNumber) {
-        var maxValue = administrationService.countOrganisations();
-        var pageActual = Slice.cropPage(pageNumber, maxValue);
-        if (!pageActual.equals(pageNumber - 1)) {
-            return new ModelAndView("redirect:/iam/clm/page/" + (pageActual +1));
-        }
-        var result = administrationService.readClaims((pageActual));
-        var orgs = result.getPageData().stream().map(ClaimData::getOrganisationId)
-                .distinct().map(administrationService::readOrganisation)
-                .collect(Collectors.toList());
-        var users = result.getPageData().stream().map(ClaimData::getSubject)
-                .distinct().map(administrationService::readUser)
-                .collect(Collectors.toList());
-        var transformed = dtoFactory.toInfo(result.getPageData(), orgs, users);
-        var model = dtoFactory.calculatePageData(pageActual, maxValue, "/iam/org");
-        model.put(
+    @GetMapping("org/{orgId}")
+    public ModelAndView getClaimsOverview(@PathVariable String orgId) {
+        var users = administrationService.getUsersForOrganisation(orgId);
+        var userClaims = Arrays.stream(users)
+                .map(userData -> dtoFactory.toInfo(userData, administrationService.readClaims(OrganisationSubjectPair.builder()
+                        .subject(userData.getSubject())
+                        .organisationId(orgId)
+                        .build())))
+                .toList();
+        var org = administrationService.readOrganisation(orgId);
+        var transformed = ClaimOrganisationInfo.builder()
+                .organisationName(org.getOrganisationName())
+                .organisationId(org.getOrganisationId())
+                .users(userClaims)
+                .build();
+        var model = Map.of(
                 "tableData", transformed
-                );
+        );
         return new ModelAndView("claims_overview", model);
     }
+
 
     @GetMapping()
     public ModelAndView createClaims() {
@@ -56,20 +60,26 @@ public class ClaimsController
         return new ModelAndView("claims_detail", model);
     }
     @PostMapping()
-    public RedirectView addClaims(@ModelAttribute ClaimData source) {
-        administrationService.createClaim(source);
-        return new RedirectView("/iam/clm/page/1");
-    }
-
-    @PutMapping
-    public RedirectView updateClaims(@ModelAttribute ClaimData source) {
-        administrationService.updateClaims(source);
+    public RedirectView addClaims(
+            @RequestParam final String organisationId,
+            @RequestParam final String subject,
+            @RequestParam final String[] claims
+            ) {
+        administrationService.createClaim(OrganisationSubjectPair.builder()
+                        .organisationId(organisationId)
+                        .subject(subject)
+                .build(), ClaimData.builder()
+                        .claims(claims)
+                .build());
         return new RedirectView("/iam/clm/page/1");
     }
 
     @GetMapping("{orgId}/{subject}")
     public ModelAndView getClaims(@PathVariable String orgId, @PathVariable String subject) {
-        var result = administrationService.readClaims(orgId, subject);
+        var result = administrationService.readClaims(OrganisationSubjectPair.builder()
+                        .organisationId(orgId)
+                        .subject(subject)
+                .build());
         var model = Map.of("tableData", result);
         return new ModelAndView("claims_detail", model);
     }
